--- a/sass/estructura/_responsive.scss
+++ b/sass/estructura/_responsive.scss
@@ -80,6 +80,9 @@
                 display: block;
                 display: flex;
                 justify-content: center;
+                &::after {
+                    display: none;
+                }
                 &:hover {
                     background-color: rgba(255,255,255,.2);
                 }
@@ -116,6 +119,9 @@
     .banner {
         height: 600px;
         background-attachment: local; //Arreglo para celular
+    }
+    .nashei {
+        border: 0;
     }
 
     // Alquiler y Venta //
