--- a/sass/estructura/_inicio.scss
+++ b/sass/estructura/_inicio.scss
@@ -111,7 +111,7 @@ body {
   height: 200px;
   display: inline-block;
   overflow: hidden;
-  background: #f1f2f3;
+//   background: #f1f2f3;
 }
 .ldio-6k96ilatv2t {
   width: 100%;
