--- a/sass/estructura/_responsive.scss
+++ b/sass/estructura/_responsive.scss
@@ -50,6 +50,11 @@
 /* ----- Medium devices (tablets, 768px and up) ----- */
 @media screen and (max-width: 768px) {
 
+    html {
+        overflow-x: hidden;
+    }
+
+
     // Inicio //
     body {
         font-size: 12px;
