--- a/sass/estructura/_footer.scss
+++ b/sass/estructura/_footer.scss
@@ -1,8 +1,9 @@
 /* ----- FOOTER ----- */
 
 footer {
-    background-color: rgb(36, 36, 36);
     width: 100%;
+    background-color: rgb(36, 36, 36);
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.8 );
     .foot_padre {
         padding: 2.5em 0 2.5em 0;
         display: flex;
