--- a/sass/estructura/_inicio.scss
+++ b/sass/estructura/_inicio.scss
@@ -12,7 +12,8 @@ html {
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    // font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     overflow-x: hidden;
     width: 100%;
     font-size: 16px;
@@ -188,6 +189,7 @@ header {
     ul {
         li {
             display: inline-block;
+            // display: none;
             margin: 1.25em;
             list-style: none;
             position: relative;
@@ -340,6 +342,6 @@ footer {
 }
 
 .nashei {
-    padding-bottom: 0.4375rem;
+    padding-bottom: 0.3125rem;
     border-bottom: 2px solid #000;
 }
