--- a/sass/estructura/_venta-alquiler.scss
+++ b/sass/estructura/_venta-alquiler.scss
@@ -207,7 +207,9 @@
     // position: relative;
     // width: 50%;
     // width: 780px;
-    width: 70%;
+    width: 100%;
+    height: 31.25em;
+    // height: 100px;
     // height: 440px;
     // box-shadow: 0 0 6px 0 rgb(0 0 0 / 40%);
     // animation-name: modal;
@@ -220,51 +222,80 @@
 
 .swiper {
 	width: 100%;
+    height: 100%;
 }
 
 .cont_ventana_arriba {
-    background-color: #000;
+    // background-color: #000;
     display: flex;
+    flex-direction: column;
+    // flex-wrap: wrap;
+    // max-height: 70%;
+    // overflow: hidden;
 }
+// .cont_ventana_abajo {
+//     // border: 2px solid red;
+//     // margin: 20px 0 0 0;
+//     // background-color: #000;
+//     height: 30%;
+//     // height: 500px;
+//     width: 100%;
+// }
 
 .info_casa {
+    position: relative;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    width: 30%;
+    flex-direction: column;
+    // flex-wrap: wrap;
+    // align-items: center;
+    width: 100%;
     // padding: 20px;
     background-color: #fff;
-    .cruz {
-        width: 100%;
+    .cont_cruz {
+        position: absolute;
         text-align: right;
-        padding: 0.625em 0.625em 0 0;
-        font-size: 1.375em;
-        cursor: pointer;
-        color: rgba(0, 0, 0, 0.767);
-        &:hover {
-            color: #000;
+        top: -500px;
+        right: 0;
+        z-index: 700;
+        .cruz {
+            margin: 0.625em 0.625em 0 0;
+            font-size: 1.375em;
+            cursor: pointer;
+            color: rgba(0, 0, 0, 0.767);
+            &:hover {
+                color: #000;
+                animation: rotateIn;
+                animation-duration: 0.5s;
+            }
         }
     }
     h2 {
+        position: absolute;
+        z-index: 500;
+        top: -31.25rem;
         font-family: $primaryFont;
-        color: #223c54;
+        color: #000000;
         font-size: 2.1875em;
         letter-spacing: 1px;
+        width: 100%;
         // line-height: 45px;
         margin: 0 0 0.5em;
         text-align: left;
         padding: 1.25rem 0 0 1.875rem ;
+        // padding-left: 1.875rem ;
         font-weight: 400;
+        // display: none;
     }
     .desc_icono2 {
         display: flex;
         flex-wrap: wrap;
         margin-top: 1.25em;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
+        padding: 0 30px 0 30px;
         .dorm, .baño, .metro2, .pileta {
-            width: 40%;
+            // margin: auto;
+            // width: 15%;
             color: #60707f;
             i {
                 font-size: 1.875em;
@@ -275,27 +306,38 @@
                 margin-left: 0.3125em;
             }
         }
-        .metro2, .pileta {
-            margin-top: 1.25em;
-        }
+        // .metro2, .pileta {
+        //     // margin-top: 1.25em;
+        // }
     }
     h3 {
+        width: 100%;
         font-family: 'Lora';
         font-weight: 500;
         font-size: 1.375em;
         letter-spacing: 1px;
-        padding: 30px 0 0 30px;
+        padding: 1.875rem 1.875rem 0.625rem 1.875rem;
     }   
     p {
-        padding: 1.875em;
+        font-size: 0.875em;
+        // padding: 1.875em;
+        // padding-left: 1.875em;
         line-height: 1.6875em;
+        padding: 5px 30px 0 30px;
     }
     .btn_info {
-        text-align: center;
+        // position: relative;
+        // bottom: 0;
+        // top: 0;
+        // text-align: center;
         // display: inline;
-        width: 88%;
+        width: 40%;
+        // text-align: center;
+        // align-content: center;
         // padding: 0 30px;
-        margin-left: 1.875em;
+        // margin: 20px 0 20px 0;
+        margin: 1.25em auto;
+        // margin-left: 1.875em;
         // margin: auto !important;
         // margin-left: 80px;
         padding: 0.9375em 1.25em;
@@ -305,6 +347,7 @@
         cursor: pointer;
         background-color: #CF505A;
         letter-spacing: 1px;
+        font-size: 0.9em;
         &:hover {
             background-color: #c33641;
         }
@@ -312,6 +355,7 @@
 }
 
 .image__wrapper {
+    height: 100%;
     width: 100%;
 	position: relative;
 	padding-top: 56.25%;
@@ -357,14 +401,14 @@
 
 .contModal{
 	width: 100%;
-	height:100%;
+	height: 100%;
 	display: flex;
-	justify-content: space-between;
+	// justify-content: space-between;
 	align-items: center;
 }
 
 .modal{
-	display: none;
+	// display: none;
 	position: fixed;
 	z-index:1;
 	overflow: auto;
@@ -380,16 +424,21 @@
 	background-color: #fefefe;
 	margin: auto;
 	width: 80%;
-    height: 50em;
+	// width: 70%;
+    // height: 50em;
     background-color: #fff;
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .4);
-    animation-name: modal;
-    animation-duration: 0.4s;
+    border-radius: 5px;
+    overflow: hidden;
+    animation: fadeIn;
+    animation-duration: 0.5s;
+    // animation-name: modal;
+    // animation-duration: 0.4s;
 }
-@keyframes modal{
-	from{top:-330px; opacity:0;}
-	to{top:0; opacity:1;}
-}
+// @keyframes modal{
+// 	from{top:-330px; opacity:0;}
+// 	to{top:0; opacity:1;}
+// }
 .close{
 	color: #f2f2f2;
 	font-size:1.875em;
