--- a/sass/estructura/_responsive.scss
+++ b/sass/estructura/_responsive.scss
@@ -40,6 +40,11 @@
             padding-left: 10px;
         }
     }
+    .info_casa {
+        .btn_info {
+            width: 60%;
+        }
+    }
 
     // Contacto
     .titulo {
@@ -161,6 +166,36 @@
         .casa1, .casa2 {
             margin: 10px 10px 20px 10px;
         }
+    }
+    .info_casa {
+        .desc_icono2 {
+            .dorm,.baño,.metro2,.pileta {
+                width: 50%;
+                font-size: 10px;
+                padding: 10px 10px 0px 10px;
+                margin-left: -30px;
+            }
+        }
+        .btn_info {
+            width: 90%;
+            font-size: 0.80em;
+        }
+        p {
+            font-size: 0.8em;
+            padding: 10px 10px 0px 10px;
+        }
+        h3 {
+            font-size: 14px;
+            padding: 10px 10px 0px 10px;
+        }
+    }
+    .ventana_modal {
+        width: 80%;
+        // height: 50vh;
+        // height: 600px;
+    }
+    .container_carousel {
+        height: 200px;
     }
 
     // Nosotros //
