--- a/sass/estructura/_venta-alquiler.scss
+++ b/sass/estructura/_venta-alquiler.scss
@@ -320,26 +320,12 @@
     }   
     p {
         font-size: 0.875em;
-        // padding: 1.875em;
-        // padding-left: 1.875em;
         line-height: 1.6875em;
         padding: 5px 30px 0 30px;
     }
     .btn_info {
-        // position: relative;
-        // bottom: 0;
-        // top: 0;
-        // text-align: center;
-        // display: inline;
         width: 40%;
-        // text-align: center;
-        // align-content: center;
-        // padding: 0 30px;
-        // margin: 20px 0 20px 0;
         margin: 1.25em auto;
-        // margin-left: 1.875em;
-        // margin: auto !important;
-        // margin-left: 80px;
         padding: 0.9375em 1.25em;
         color: #fff;
         border: none !important;
@@ -419,13 +405,12 @@
 	background: rgba(0, 0, 0, 0.452);
 }
 .ventana_modal{
-    // transition: all 1s ease-in-out;
-	// position: relative;
 	background-color: #fefefe;
 	margin: auto;
-	width: 80%;
-	// width: 70%;
+	// width: 80%;
+	width: 60%;
     // height: 50em;
+    // height: 60vh;
     background-color: #fff;
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .4);
     border-radius: 5px;
