--- a/sass/estructura/_responsive.scss
+++ b/sass/estructura/_responsive.scss
@@ -14,6 +14,27 @@
             padding-left: 10px;
         }
     }
+    .info_casa {
+        .cont_cruz {
+            position: absolute;
+            text-align: right;
+            top: -500px;
+            right: 0;
+            z-index: 700 !important;
+            background-color: #000;
+            .cruz {
+                margin: 0.625em 0.625em 0 0;
+                font-size: 1.375em;
+                cursor: pointer;
+                color: rgba(0, 0, 0, 0.767);
+                &:hover {
+                    color: #000;
+                    animation: rotateIn;
+                    animation-duration: 0.5s;
+                }
+            }
+        }
+    }
 
     // Nosotros //
     .clientes {
@@ -170,14 +191,14 @@
     .info_casa {
         .desc_icono2 {
             .dorm,.baño,.metro2,.pileta {
-                width: 50%;
+                // width: 50%;
                 font-size: 10px;
-                padding: 10px 10px 0px 10px;
+                padding: 10px 10px 10px 10px;
                 margin-left: -30px;
             }
         }
         .btn_info {
-            width: 90%;
+            // width: 60%;
             font-size: 0.80em;
         }
         p {
@@ -186,16 +207,14 @@
         }
         h3 {
             font-size: 14px;
-            padding: 10px 10px 0px 10px;
+            padding: 0.625em 0.625em 0rem 0.625rem;
         }
     }
     .ventana_modal {
         width: 80%;
-        // height: 50vh;
-        // height: 600px;
     }
     .container_carousel {
-        height: 200px;
+        height: 18.75rem;
     }
 
     // Nosotros //
@@ -266,6 +285,36 @@
             margin: 0;
             margin-bottom: 20px;
         }
+    }
+    .info_casa {
+        .desc_icono2 {
+            justify-content: space-evenly;
+            .dorm,.baño,.metro2,.pileta {
+                width: 50%;
+                font-size: 0.83em;
+                padding: 0.625em;
+                margin-left: 0px;
+            }
+        }
+        .btn_info {
+            width: 90%;
+            font-size: 0.80em;
+        }
+        p {
+            font-size: 0.8em;
+            padding: 10px 5% 0 5%;
+            line-height: 0.875rem;
+        }
+        h3 {
+            font-size: 14px;
+            padding: 10px 5% 0 5%;
+        }
+    }
+    .ventana_modal {
+        width: 80%;
+    }
+    .container_carousel {
+        height: 250px; //antes en 200px
     }
 
     // Nosotros //
