--- a/sass/estructura/_responsive.scss
+++ b/sass/estructura/_responsive.scss
@@ -67,9 +67,9 @@
     
     // Inicio //
     
-    html {
-        overflow-x: hidden;
-    }
+    // html {
+    //     // overflow-x: hidden;
+    // }
     body {
         font-size: 12px;
     }
