--- a/sass/estructura/_venta-alquiler.scss
+++ b/sass/estructura/_venta-alquiler.scss
@@ -107,6 +107,8 @@
             font-size: 1.875em;
             font-weight: 400;
             color: rgb(63, 63, 63);
+            border-bottom: 1px solid; // aacaa
+            padding-bottom: 0.5em;
         }
     }
 }
