--- a/sass/estructura/_venta-alquiler.scss
+++ b/sass/estructura/_venta-alquiler.scss
@@ -353,9 +353,13 @@
     position: absolute;
 	top: 0;
 	left: 0;
+    background-size: contain;
+    // background-size: cover;
+    // object-fit: contain;
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
+	// object-fit: cover;
+    // transform: scale(1.2);
 	object-position: center top;
 	vertical-align: top;
 }
